# agentty

./: .git-town.toml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GEMINI.md  README.md  dist-workspace.toml
crates/ag-xtask/: AGENTS.md  Cargo.toml
crates/ag-xtask/src/: AGENTS.md  check_index.rs  main.rs  roadmap.rs  workspace_map.rs
crates/agentty/: AGENTS.md  Cargo.toml  askama.toml
crates/agentty/.sqlx/: AGENTS.md  query-0f580d241f3c3f8e3f8cd3e5c324709f6ec5c6d67da1f9ae51e3208002d9df5c.json  query-1fe961aa59e6ec14e0ceda6ed64afceb25f876f5ffa3212132ab9bddda9d4952.json  query-422bcf5129f03b6058bd1e5a04d376caa763c5084bd499abe763bfb2e655ce7a.json  query-4a70667663d0b0eb4f7479d3f7d055a856b881683653a9b2244b24a8ea1c6e99.json  query-4fa8a126cdf0a80ff8b7db1cad58a8fa669e46703aaec25c958ebca33ef71aed.json  query-4fddbf8478a319b05505c33cba1944abe81d0ffc2a91a37f6966b57f730eb6d1.json  query-5518f001b631773f946cb7bbb0a4ff9c0ba92ee5deed4959ac9fe7f693cb6de8.json  query-63e27fc193049aa71d0e75b490a094a5099186ea60e85d3e12f2a82e1157fdb7.json  query-752ea1df1fa1d6ddd1dcddfdc3b974a862401de3a70b0754eadabffc59ffe035.json  query-76e8b8a274c05f2d3a7308c7113bdb14a4c39af71dcff6a37bbdf315c6a42a61.json  query-8f192d056a69946313fc766cd20ed601f615bc5a732bff299026ed907d53520f.json  query-9e944b14a5f319e1b97eaed13533e7b0e84bd22c8018e72df0af239b94ba74f9.json  query-a1c715c9101fb1c086035c85925525d12185392044491ef35375a7bf0ded2569.json  query-b88f5652d96b75591911bafa64b47776ea4090007e9e4bf8d82e31b40523090b.json  query-bfcda87a513dbee5abbc35a95944a42a4791715faeafda11c9569b1e4f938eee.json  query-c315669af133f3b4c7fde602d04ea1dd0cc02cf7826128f51fa05eff004d04a9.json  query-caebfabc3db964c052fcd9ed046850be7ae44b93e4bf5f24e4b1668d3e403ab1.json  query-d0bc573a187f5fdb47f296e235060d6804f187dedc08250110042d2eb157e098.json  query-df4746c402d62fd41431633089d019f3b483a0459ac77a964e60980a120aedc2.json
crates/agentty/migrations/: 002_add_status_to_session.sql  006_add_title_to_session.sql  007_recreate_session_with_id_primary_key.sql  008_add_model_to_session.sql  009_add_prompt_output_to_session.sql  011_add_commit_count_to_session.sql  012_create_session_operation.sql  015_add_summary_to_session.sql  016_backfill_summary_with_output.sql  019_drop_agent_from_session.sql  021_create_settings.sql  023_create_session_activity.sql  027_add_provider_conversation_id_to_session.sql  029_create_project_setting.sql  030_create_session_review_request.sql  031_add_published_upstream_ref_to_session.sql  032_add_session_indexes.sql  033_create_session_follow_up_task.sql  035_remove_non_github_review_requests.sql  037_add_line_change_stats_to_session.sql  038_add_is_draft_to_session.sql  042_migrate_claude_opus_46_to_47.sql  043_drop_session_follow_up_task.sql  AGENTS.md
crates/agentty/resources/: AGENTS.md  auto_commit_assist_prompt.md  focused_review_assist_prompt.md  merge_commit_message_prompt.md  plan_mode.md  plan_mode_prompt.md  protocol_instruction_prompt.md  protocol_instruction_prompt_with_schema.md  protocol_instruction_prompt_without_schema.md  question_instruction_prompt.md  rebase_assist_prompt.md  repo_root_path_prompt.md  resume_with_session_output_prompt.md  review_assist_prompt.md  session_commit_message_prompt.md  session_terminal_summary_prompt.md  session_title_generation_prompt.md
crates/agentty/src/: AGENTS.md  acp.rs  agent.rs  app.rs  db.rs  domain.rs  file_list.rs  git.rs  health.rs  infra.rs  lib.rs  lock.rs  main.rs  model.rs  runtime.rs  ui.rs
crates/agentty/src/app/: AGENTS.md  assist.rs  branch_publish.rs  core.rs  error.rs  merge_queue.rs  mod.rs  pr.rs  project.rs  reducer.rs  review.rs  review_request.rs  service.rs  session.rs  session_state.rs  setting.rs  settings.rs  startup.rs  state.rs  tab.rs  task.rs  title.rs  worker.rs
crates/agentty/src/app/core/: draw.rs  events.rs  new.rs  roadmap.rs  state.rs
crates/agentty/src/app/session/: AGENTS.md  access.rs  codex_usage.rs  core.rs  error.rs  lifecycle.rs  load.rs  merge.rs  mod.rs  refresh.rs  review.rs  task.rs  worker.rs  workflow.rs
crates/agentty/src/domain/: AGENTS.md  agent.rs  composer.rs  file.rs  input.rs  mod.rs  permission.rs  plan.rs  project.rs  session.rs  setting.rs
crates/agentty/src/infra/: AGENTS.md  agent.rs  app_server.rs  app_server_router.rs  app_server_transport.rs  channel.rs  codex_app_server.rs  db.rs  file_index.rs  forge.rs  fs.rs  gemini_acp.rs  git.rs  lock.rs  mod.rs  project_repository.rs  setting_repository.rs  tmux.rs  version.rs
crates/agentty/src/infra/agent/: AGENTS.md  availability.rs  backend.rs  claude.rs  codex.rs  gemini.rs  prompt.rs  protocol.rs  provider.rs  question_parser.rs  response_parser.rs  submission.rs
crates/agentty/src/infra/app_server/: AGENTS.md  contract.rs  error.rs  prompt.rs  registry.rs  retry.rs
crates/agentty/src/infra/db/: usage.rs  (+6 more)
crates/agentty/src/runtime/: AGENTS.md  clipboard_image.rs  core.rs  event.rs  key_handler.rs  mod.rs  mode.rs  terminal.rs  timing.rs
crates/agentty/src/ui/: AGENTS.md  README.md  activity_heatmap.rs  component.rs  diff_util.rs  icon.rs  layout.rs  markdown.rs  mod.rs  overlay.rs  overlays.rs  page.rs  pages.rs  render.rs  router.rs  style.rs  task_roadmap.rs  text_util.rs  util.rs
crates/agentty/tests/: AGENTS.md  e2e.rs  protocol_compliance_e2e.rs  showcase.rs
crates/agentty/tests/e2e/: common.rs  confirmation.rs  demo.rs  main.rs  navigation.rs  project.rs  session.rs  setting.rs  stat.rs
crates/agentty/tests/e2e_screenshots/: AGENTS.md
crates/agentty/tests/e2e_support/: AGENTS.md  harness.rs  mod.rs
crates/testty/: AGENTS.md  Cargo.toml  README.md
crates/testty/examples/: AGENTS.md  frame_diffing.rs  journey_composition.rs  proof_pipeline.rs
crates/testty/src/: AGENTS.md  artifact.rs  assertion.rs  calibration.rs  diff.rs  frame.rs  journey.rs  lib.rs  locator.rs  overlay.rs  proof.rs  recipe.rs  region.rs  renderer.rs  scenario.rs  session.rs  snapshot.rs  step.rs  vhs.rs
crates/testty/src/proof/: AGENTS.md  backend.rs  frame_text.rs  gif.rs  html.rs  report.rs  strip.rs
(+309 files in other folders)
