[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.9"
authors = ["Vladimir Minev"]
edition = "2024"
description = "A terminal UI tool for managing agents"
repository = "https://github.com/opencloudtool/agentty"
homepage = "https://github.com/opencloudtool/agentty"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
ratatui = "0.30.0"
crossterm = "0.29.0"
dirs = "6.0"
mockall = "0.14"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tempfile = "3.10"
tokio = { version = "1", features = ["io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

[workspace.lints.rust]
unsafe_code = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Keep noise low
must_use_candidate = "allow"

# High-signal safety/correctness
unwrap_used = "warn"
expect_used = "warn"
get_unwrap = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
todo = "warn"
unimplemented = "warn"
panic = "warn"
exit = "warn"
rc_mutex = "warn"
rc_buffer = "warn"

# Practical cleanup/perf
redundant_clone = "warn"
unused_async = "warn"
unused_peekable = "warn"
debug_assert_with_mut_call = "warn"

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true # Enables Link-time Optimization.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
