[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.6.5"
authors = [
  "Vladimir Minev <minev.dev@gmail.com>",
  "Andrei Agaev <andagaev@gmail.com>",
]
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
description = "Agentty is an ADE (Agentic Development Environment) for structured, controllable AI-assisted software development."
repository = "https://github.com/agentty-xyz/agentty"
homepage = "https://github.com/agentty-xyz/agentty"

[workspace.dependencies]
ag-forge = { path = "crates/ag-forge", version = "0.6.2" }
agent-client-protocol = "0.10.2"
arboard = { version = "3", features = ["image-data"] }
askama = "0.15.4"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0"
ignore = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
mockall = "0.14"
pulldown-cmark = "0.13.1"
ratatui = "0.30.0"
schemars = { version = "1", features = ["derive"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["macros", "runtime-tokio", "sqlite"] }
tempfile = "3.27"
thiserror = "2"
time = { version = "0.3", default-features = false, features = ["local-offset", "std"] }
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
unicode-width = "0.2"
url = "2"
uuid = { version = "1", features = ["v4"] }

[workspace.lints.rust]
unsafe_code = "deny"
dead_code = "deny"
unreachable_pub = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Keep noise low
must_use_candidate = "allow"

# High-signal safety/correctness
unwrap_used = "warn"
expect_used = "warn"
get_unwrap = "warn"
dbg_macro = "warn"
print_stdout = "warn"
print_stderr = "warn"
todo = "warn"
unimplemented = "warn"
panic = "deny"
exit = "warn"
rc_mutex = "warn"
rc_buffer = "warn"

# Practical cleanup/perf
redundant_clone = "warn"
unused_async = "warn"
unused_peekable = "warn"
debug_assert_with_mut_call = "warn"

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true # Enables Link-time Optimization.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true # Ensures debug symbols are removed.

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
