[package]
name = "ag-xtask"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
clap.workspace = true
pulldown-cmark.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
mockall.workspace = true

[lints]
workspace = true
