[package]
name = "agentty"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "agentty"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
agent-client-protocol.workspace = true
async-trait.workspace = true
crossterm.workspace = true
dirs.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tokio-util.workspace = true
uuid.workspace = true

[dev-dependencies]
mockall.workspace = true
tempfile.workspace = true
