[package]
name = "agentty"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "agentty"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
agent-client-protocol.workspace = true
askama.workspace = true
crossterm.workspace = true
dirs.workspace = true
ignore.workspace = true
nix.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
sqlx.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
mockall.workspace = true
tempfile.workspace = true
