[package]
name = "agentty"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "agentty"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
ag-forge.workspace = true
agent-client-protocol.workspace = true
arboard.workspace = true
askama.workspace = true
crossterm.workspace = true
dirs.workspace = true
ignore.workspace = true
image.workspace = true
ratatui.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
sqlx.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true
unicode-width.workspace = true

[dev-dependencies]
ag-forge = { workspace = true, features = ["test-utils"] }
mockall.workspace = true
tempfile.workspace = true
