[package]
name = "testty"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "Rust-native TUI end-to-end testing framework using PTY-driven semantic assertions and VHS screenshot capture."
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
image.workspace = true
portable-pty.workspace = true
tempfile.workspace = true
thiserror.workspace = true
unicode-width.workspace = true
vt100.workspace = true
